--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:watch": "esw -w lib/**",
     "prepublish": "npm run build",
     "build:demo": "babel lib -d build --ignore '**/*.test.js' && sudo npm link",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@storybook/react": "^4.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
+    "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
