--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tacos-components",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "build": "babel lib -d build --ignore '**/*.test.js'",
+    "build": "rm -rf build && babel lib -d build",
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
     "prepublish": "npm run build",
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.3",
     "@storybook/react": "^4.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
