--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "MIT",
   "devDependencies": {
     "@storybook/addon-actions": "^4.1.3",
+    "@storybook/addon-knobs": "^4.1.3",
+    "@storybook/addon-links": "^4.1.3",
     "@storybook/react": "^4.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -27,17 +29,20 @@
     "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.3",
+    "expect": "^23.6.0",
     "jest": "^22.4.2",
+    "next": "^7.0.2",
     "polished": "^1.8.2",
     "react-dom": "^16.0.0",
+    "storybook-addon-specifications": "^2.1.2",
     "styled-components": "^2.2.3"
   },
   "dependencies": {
